--- a/app/views/rounds/_form.html.erb
+++ b/app/views/rounds/_form.html.erb
@@ -20,7 +20,7 @@
 
   <%= render 'score_table' %>
 
-  <div id="bid_notice"><p></p></div>
+  <div id="bid_notice"><p><em>Please select a bid.</em></p></div>
 
   <table class="fields">
     <tbody>
