--- a/app/assets/stylesheets/main/global_template.css.scss
+++ b/app/assets/stylesheets/main/global_template.css.scss
@@ -1,11 +1,31 @@
 @import 'includes';
 
 html {
-  background-color: #bada55;
+  background-color: #cbe37f;
+}
+
+#pre_body_container {
+  margin: 0 auto;
+  width: $pagewidth;
+  height: 2em;
+
+  p {
+    margin-top: 0.5em;
+  }
+
+  .user_control {
+    padding: 0 1px;
+
+    #user_email {
+      opacity: 0.5;
+    }
+
+  }
+
 }
 
 #body_container {
-  margin: 20px auto 0 auto;
+  margin: 0 auto;
   width: $pagewidth;
 
   -moz-box-shadow: 0px 1px 5px 2px rgba(0,0,0,0.3);
@@ -14,12 +34,14 @@ html {
 }
 
 #header_container {
-  header{
-    margin: 0 auto;
-    padding: 10px;
 
-    color: $offwhite;
-    background-color: $offblack;
+  color: $offwhite;
+  background-color: $offblack;
+  padding: 10px;
+
+  header {
+    margin: 0 auto;
+
     /*border: 1px solid $offblack;*/
 
     text-align: center;
@@ -32,13 +54,15 @@ html {
 
   a {
     color: $offwhite;
-    &:hover { color: #ffffff; }
+    &:hover { color: $white; }
   }
 
-  ul {
+  nav {
     li {
       display: inline;
       margin: 0 5px;
+      text-transform: uppercase;
+      font-size: 12px;
     }
   }
 }
@@ -53,15 +77,15 @@ html {
 
   h2 {
     font-size: 2em;
-    padding-bottom: 10px;
+    padding-bottom: 5px;
     border-bottom: 1px solid $lightgrey;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 
   }
 
   h3 {
     font-size: 1.5em;
-    margin-bottom: 1em;
+    margin: 1em 0 0.5em 0;
   }
 
   p {
@@ -111,6 +135,14 @@ html {
     margin: 40px 0;
   }
 
+  figure {
+    margin-bottom: 2em;
+
+    figcaption {
+      color: $darkgrey;
+    }
+  }
+
 }
 
 #footer_container {
@@ -118,13 +150,16 @@ html {
   width: $pagewidth;
 
   footer {
-    padding: 0 15px;
+    padding: 0 1px;
   }
 }
 
 form {
+
+  padding-top: 1em;
+
   .field {
-    margin: 1em 0 1.5em 0;
+    margin-bottom: 1em;
 
     p {
       margin-bottom: .5em;
@@ -142,6 +177,11 @@ form {
   }
   .actions {
     margin: 3em 0 1em 0;
+
+    p {
+      margin-top: 1em;
+    }
+
   }
 }
 
@@ -164,9 +204,20 @@ a.delete {
 
 #alert {
   text-align: center;
-  color: $green;
+  color: $red;
 }
 
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
+}
+
+.clear {
+  clear: both;
+}
 
 /* Default scaffolded error/success notices */
 
