--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,10 +37,10 @@
   <div id="footer_container">
     <footer>
       <div id ="user_email" class="left">
-        <p>a <a href="http://heywill.com/">heywill.com</a> party. Source on github.</p>
+        <p>&hearts; <a href="http://heywill.com/">heywill.com</a> - source on <a href="https://github.com/wjoneil/misere">github</a>.</p>
       </div>
       <div class="right">
-        <p><a href="mailto:will@heywill.com">Questions?</a></p>
+        <p><a href="mailto:will@heywill.com?subject=Misere">Questions?</a></p>
       </div>
       <div class="clear"></div>
 
