squidfingers background for that retro feel :3

--- a/app/assets/stylesheets/main/global_template.css.scss
+++ b/app/assets/stylesheets/main/global_template.css.scss
@@ -1,7 +1,7 @@
 @import 'includes';
 
 html {
-  background-color: #cbe37f;
+  background: image-url("pattern_107.gif");
 }
 
 #pre_body_container {
@@ -9,15 +9,11 @@ html {
   width: $pagewidth;
   height: 2em;
 
-  p {
-    margin-top: 0.5em;
-  }
-
   .user_control {
     padding: 0 1px;
 
     #user_email {
-      opacity: 0.5;
+      // opacity: 0.5;
     }
 
   }
@@ -193,6 +189,25 @@ a.delete {
   }
 }
 
+/* contrast for lines outside the body container */
+
+div.contrast p{
+  color: $lightgrey;
+  margin-top: 4px;
+  padding: 1px 3px;
+  border-radius: 8px;
+  border: 1px solid $offblack;
+  background-color: rgba(0,0,0,.5);
+
+  a {
+    color: $white;
+    &:hover, &:active {
+      color: $offwhite;
+    }
+  }
+}
+
+
 #notice_container, #alert_container {
   display: none;
 }
@@ -217,6 +232,12 @@ a.delete {
 
 .clear {
   clear: both;
+}
+
+/* hardcoded because I feel like the default jqueryui button border colour looks like it's disabled */
+
+.ui-state-default {
+  border: 1px solid #aaa !important;
 }
 
 /* Default scaffolded error/success notices */
