--- a/app/views/devise/menu/_user_control.html.erb
+++ b/app/views/devise/menu/_user_control.html.erb
@@ -1,8 +1,8 @@
-<div class="user_control">
+<div class="user_control contrast">
   <div id ="user_email" class="left">
     <% if user_signed_in? %>
       <p>
-        You're logged in as <%= current_user.email %>
+        You're logged in as <%= current_user.email %>.
       </p>
     <% end %>
   </div>
