--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,10 +34,10 @@
       <%= yield %>
     </div>
   </div>
-  <div id="footer_container">
+  <div id="footer_container" class="contrast">
     <footer>
-      <div id ="user_email" class="left">
-        <p>&hearts; <a href="http://heywill.com/">heywill.com</a> - source on <a href="https://github.com/wjoneil/misere">github</a>.</p>
+      <div class="left">
+        <p>&hearts; <a href="http://heywill.com/">heywill.com</a> - source on <a href="https://github.com/wjoneil/misere">github</a>. Background from <a href="http://www.squidfingers.com/patterns/">squidfingers</a>.</p>
       </div>
       <div class="right">
         <p><a href="mailto:will@heywill.com?subject=Misere">Questions?</a></p>
