--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -21,7 +21,7 @@
 
     <%= image_tag "step1.png", alt: "The bidding widget", class: "step left" %>
     <p >At the beginning of each round, you enter the bid details using the helpful widget.</p>
-    <p> At the end of the round, you mark whether they was successful, and how many tricks the other team took.</p>
+    <p> At the end of the round, you mark whether the bidding team was successful, and how many tricks the other team took.</p>
 
   </div>
 
