--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,12 @@
 <p>Hello <%= @resource.email %>!</p>
 
-<p>Someone has requested a link to change your password, and you can do this through the link below.</p>
+<p>Someone has requested a link to change your Misere password. You can do this through the link below.</p>
 
 <p><%= link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>If you didn't request this, then someone must be really desperate to play 500 as you.</p>
+<p>Anyway, your password won't change until you access the link above and create a new one.</p>
+
+<p>kind regards,</p>
+
+<p>The mailer robot</p>
