--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -124,8 +124,8 @@ button {width: auto; overflow: visible;}
 -------------------------------------------------------------------------------*/
 
 /* new Linux- and Windows-friendly sans-serif font stack: http://mky.be/fontstack */
-/*body {font: 14px Helmet, Freesans, sans-serif;}*/
-body {font: 14px Arial, Helvetica, sans-serif;}
+body {font: 14px Helmet, Freesans, sans-serif;}
+/*body {font: 14px Arial, Helvetica, sans-serif;}*/
 
 /* using local fonts? make sure to read up on Paul Irish's
   Bulletproof @font-face syntax: http://mky.be/font-face/bulletproof/ */
@@ -137,14 +137,14 @@ a {color: #03f;}
 a:hover {color: #69f;}
 
 /* Custom text-selection colors (remove any text shadows: twitter.com/miketaylr/status/12228805301) */
-::-moz-selection{background: #fcd700; color: #fff; text-shadow: none;}
-::selection {background: #fcd700; color: #fff; text-shadow: none;}
+::-moz-selection{background: #bada55; color: #fff; text-shadow: none;}
+::selection {background: #bada55; color: #fff; text-shadow: none;}
 
 /*  j.mp/webkit-tap-highlight-color */
-a:link {-webkit-tap-highlight-color: #fcd700;}
+a:link {-webkit-tap-highlight-color: #bada55;}
 
-ins {background-color: #fcd700; color: #000; text-decoration: none;}
-mark {background-color: #fcd700; color: #000; font-style: italic; font-weight: bold;}
+ins {background-color: #bada55; color: #000; text-decoration: none;}
+mark {background-color: #bada55; color: #000; font-style: italic; font-weight: bold;}
 
 
 
