--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,10 @@
 <head>
   <title>Misère</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
+  <% unless MISERE_CONFIG[:typekit].blank? %>
+    <script type="text/javascript" src="//use.typekit.net/<%= MISERE_CONFIG[:typekit] %>.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+  <% end %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
