forgot to actually style the h1 in a way that typekit would pick it up

--- a/app/assets/stylesheets/main/global_template.css.scss
+++ b/app/assets/stylesheets/main/global_template.css.scss
@@ -46,6 +46,9 @@ html {
 
   h1 {
     font-size: 3em;
+    /* typekit typeface specific */
+    font-style: italic;
+    font-weight: 300;
   }
 
   a {
