style tweaks for error formatting, and some ill-advised dabbling with page title display.

--- a/app/views/games/finish.html.erb
+++ b/app/views/games/finish.html.erb
@@ -1,4 +1,4 @@
-<h2><%= @game.title %></h2>
+<h2><%= @game.competitors %></h2>
 <div class="details">
 
   <h3><%= @game.winning_team.name %> is the winner.</h3>
