--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -13,7 +13,7 @@
       <ul class="control">
         <li><%= link_to 'Details', player %></li>
         <li><%= link_to 'Edit', edit_player_path(player) %></li>
-        <li><%= link_to 'Delete', player, {method: :delete, class: "delete"}, data: { confirm: 'Are you sure?' } %></li>
+        <li><%= link_to 'Delete', player, {method: :delete, class: "delete", confirm: 'You sure? Deleting this player will also disband any teams they were a part of, and remove the data for games they participated in.' } %></li>
       </ul>
     </div>
   </div>
