the heart at the bottom of the template was throwing off the formatting

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
   <div id="footer_container" class="contrast">
     <footer>
       <div class="left">
-        <p>&hearts; <a href="http://heywill.com/">heywill.com</a> - source on <a href="https://github.com/wjoneil/misere">github</a>. Background from <a href="http://www.squidfingers.com/patterns/">squidfingers</a>.</p>
+        <p>&lt;3 <a href="http://heywill.com/">heywill.com</a> - source on <a href="https://github.com/wjoneil/misere">github</a>. Background from <a href="http://www.squidfingers.com/patterns/">squidfingers</a>.</p>
       </div>
       <div class="right">
         <p><a href="mailto:will@heywill.com?subject=Misere">Questions?</a></p>
